# NetScanOrchestrator-NG

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-runtime.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd.yml  ci.yml  docker-smoke.yml
.playwright/: playwright.config.ts  ws.spec.ts
alembic/: env.py
alembic/versions/: 096ab1d92cda_init_schema.py  add_resultraw.py
alembic_old/: env.py  env_old.py
backend/: app.py  main.py
backend/api/: routers.py
backend/app/: __init__.py  models.py  settings.py  settings_old.py  websockets.py  xml_parser.py
backend/app/routers/: scans.py
backend/domain/: runner.py  scan_coordinator.py  target_expander.py  task_registry.py  xml_parser.py  xml_summary.py
backend/domain/legacy_scanner/: nmap_scanner.py  parallel_scanner.py
backend/infra/: db.py  models.py  ws_hub.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.gateway
docs/: ARCHITECTURE.md  api.md  architecture.md  backend.md  docker.md  frontend.md  index.md  install.md  usage.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: ProjectDashboardPage.test.tsx  ProjectsPage.test.tsx  (+1 more)
frontend/tests/: ws-scan.spec.ts
ops/: nginx.conf
scripts/: drift_guard.sh  smoke.sh
tests/docs/: test_api_docs.py
tools/: check_docs_sync.py
(+18 files in other folders)
